Rewrite refactoring